adicionei um parágrafo

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Meu primeiro site em repositório</h1>
     <hr>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et officia quo nostrum iure veniam placeat voluptas ex nemo beatae blanditiis non alias, odio maxime nisi eligendi ducimus eveniet magni adipisci.</p>
+    <p>lorem ipsum dolor sit amet consectetur adipis lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium tempore facilis ipsa, hic laboriosam earum at voluptate magni, quos eveniet praesentium recusandae quas voluptatibus architecto? Debitis tempora facere fuga cumque!</p>
 </body>
 </html>
